# ml_engineer_assignment_loyalty_program

./: .pre-commit-config.yaml  README.md  pyproject.toml
loyalty_program/: data_loader.py  model.py
