[tool.poetry]
name = "loyalty-program"
version = "0.1.0"
description = ""
authors = ["Micha de Groot <git@michadegroot.nl>"]
readme = "README.md"
packages = [{include = "loyalty_program"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.1"
pandas = "^2.2.2"


[tool.poetry.group.dev.dependencies]
pyright = "^1.1.375"
ruff = "^0.5.7"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.pyright]
pythonVersion = "3.10"
